--- a/components/Writing/ArticleOverlay.module.css
+++ b/components/Writing/ArticleOverlay.module.css
@@ -94,7 +94,6 @@
   line-height: 1.7;
   color: #F9F9F9;
   width: 100%;
-  max-width: 900px;
 }
 
 .body h2 {
